2013-05-06  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_tpi.c: instead of private set_pin() function pointer use the one
	declared in struct PROGRAMMER.
	* avrftdi_private.h: remove set_pin function pointer
	* avrftdi.c: remove set_pin function pointer init, add pgm->setpin init.

2013-05-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* pindefs.h: Include "ac_cfg.h" before testing for HAVE_* macros.

2013-05-05  Rene Liebscher <R.Liebscher@gmx.de>

	* main.c: revert to rev 1159 (doing pgm_display after pgm_open)
	* avrpart.[ch]: moved avr_pin_name to pindefs.[ch]
	* pgm.c: moved pins_to_str to pindefs.[ch], added initialization of 
          new pin definitions in pgm_new()
	* pindefs.[ch]: added moved functions from other files, added a lot of 
          documentation, reformatted files using astyle to have consistent spacing,
          added a new generic check function for pins
	* ft245r.c: used new generic pin check function

2013-05-03  Rene Liebscher <R.Liebscher@gmx.de>

	Create new pin definition data structures to support 0-based pin numbers,
	and mixed inverse/non-inverse pin lists.
	* avrftdi.c,buspirate.c,linuxgpio.c,par.c,serbb_*.c: added function call 
          to fill old pinno entries from new pin definitions.
	* pindefs.[hc]: added data struct and helper functions for new pin definitions
	* avrdude.conf.in: pins in entries using ftdi_syncbb are now 0-based
	* config_gram.y: allow combinations of inverted and non-inverted pins in pin lists
	* ft245r.c: reworked to work directly with the new pin definitions,
          pins are now 0-based, inverse pins are supported, buff is supported
	* pgm.[ch]: added new pin definitions field to programmer structure, 
          adapted pin display functions

2013-05-03  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_private.h: Remove update forward declaration from avrftdi_print to
	avrftdi_log.
	* avrftdi_tpi.c: Do all I/O in terms of pgm->cmd_tpi()-calls instead of